client/reader/start/style.scss
.reader-start__title {
	color: darken( $gray, 30% );
	font-size: 30px;
	font-weight: 300;
	margin-bottom: 8px;

	@include breakpoint( "<960px" ) {
		padding: 0 15px;
	}

	@include breakpoint( "<660px" ) {
		margin-top: 20px;
	}
}

.reader-start__description {
	color: $gray;
	font-size: 15px;
	font-weight: 100;
	line-height: 1.4;
	margin-bottom: 15px;

	@include breakpoint( "<960px" ) {
		padding: 0 15px;
	}

	@include breakpoint( ">480px" ) {
		font-size: 18px;
	}
}

.reader-start__cards {

	transform: translateX( 0 ); // Prevents overflowing content from disappearing

    @include breakpoint( ">960px" ) {
	    column-count: 2;
	    column-gap: 1em;
    }

	.site-icon {
		border: 4px solid $white;
		margin: 0 auto;
	}
}

.reader-start-card {
	margin-bottom: 25px;

	@include breakpoint( ">960px" ) {
		display: inline-block;
	    margin: 8px 5px 8px 2px;
	    width: 100%;
	}

	&:first-child {

		@include breakpoint( "<480px" ) {
			margin-top: 20px;
		}
	}

	&:nth-child( even ),
	&:last-child {
		margin-right: 0;
	}

	&:last-child {
		margin-bottom: 100px;

		@include breakpoint( ">480px" ) {
			margin-bottom: 80px;
		}
	}

	.reader-start-card-footer {
		margin-top: -25px;
	}

	&.has-post-preview {
		.reader-start-card-footer {
			margin: 0;
		}
	}

	.post-excerpt,
	.post-excerpt.is-long {
		font-family: $serif;
		font-size: 12px;
		margin: 10px 0 -10px;
		max-height: none;
	}

	.post-excerpt.is-long {

		&:after {
			@include long-content-fade( $color: $white, $direction: right, $size: 100% );
			height: 20px;
			position: relative;
		}
	}

	.follow-button {
		float: right;
		margin-top: 10px;
		overflow: visible;
		right: 0;

		@include breakpoint( ">480px" ) {
			margin-top: 20px;
		}

		&:last-child {
			margin-bottom: -6px;
		}

		.gridicon {
			position: absolute;
				left: 15px;
				top: 9px;
		}

		.follow-button__label {
			color: $gray-dark;
			font-size: 16px;

			@include breakpoint( "<660px" ) {
				display: none;
			}
		}

		&:hover {
			color: $gray-dark;

			.gridicon {
				fill: $gray-dark;
			}

			.follow-button__label {
				cursor: pointer;
				color: $gray-dark;
			}
		}
	}

	.follow-button.is-following {

		.follow-button__label {
			color: $alert-green;
		}

		&:hover {
			background: none;

			.gridicon {
				fill: $alert-green;
			}

			.follow-button__label {
				cursor: pointer;
				color: $alert-green;
			}
		}
	}
}

.reader-start-card__hero {
	background: lighten( $gray, 30% ); // Background to be used if no image
	height: 70px;
	margin: -24px;
}

.reader-start-card__header {
	margin-top: -38px;
	text-align: center;
}

.reader-start-card__site-title {
	font-size: 20px;
	font-weight: 500;
	line-height: 1.2;
	margin-bottom: 3px;
}

.reader-start-card__site-description {
	color: $gray;
	font-size: 12px;

	.site-icon {
		margin: auto;
	}
}

.reader-start-card__site-title,
.reader-start-card__site-description {
	text-align: center;
}

.reader-start-card__follower-count {
	color: $gray;
	display: inline-block;
	float: left;
	font-size: 12px;
	font-weight: 600;
	margin-top: 20px;

	@include breakpoint( ">480px" ) {
		margin-top: 30px;
	}
}

.reader-start-post-preview {
	border: 1px solid lighten( $gray, 30% );
	border-radius: 1px;
	margin-top: -8px;
	padding: 10px 10px 20px;
}

.reader-start-post-preview__title {
	color: $gray-dark;
	display: block;
	font-family: $serif;
	font-size: 16px;
	font-weight: 600;
	line-height: 1;
	margin-bottom: 5px;

	&:hover {
		color: darken( $gray, 10% );
	}
}

.reader-start-post-preview__byline {
	color: $gray;
	font-size: 12px;
	margin-bottom: 10px;

	.gravatar {
		float: left;
	}
}

.reader-start-post-preview__author {
	margin-left: 4px;
}

.reader-start__bar {
	animation: slideout-bar 1.5s ease-out 1 forwards;
	background: rgba( 102, 142, 170, .9 );
	padding: 8px;
	position: fixed;
		bottom: 0;
	width: 100%;
	z-index: 5000;

    button {

    	@include breakpoint( ">660px" ) {
    		float: right;
    	}
    }
}

.reader-start__bar-action {
	color: $white;
	margin-left: 36%;
	width: 50%;

	@include breakpoint( "<960px" ) {
		margin-left: 10%;
		width: 80%;
	}

	@include breakpoint( "<660px" ) {
		text-align: center;
		width: 90%;
	}

	@include breakpoint( "<480px" ) {
		margin: -10px 0 0 10px;
	}
}

.reader-start__bar-text {
	display: inline-block;
	font-size: 18px;
	margin-top: 8px;
}

@keyframes slideout-bar {

    0% {
        transform: translateY( calc( 100vh - 100px ) );
    }

    100% {
    	transform: translateY( 0 );
    }
}

// Appending inline recommendations

.reader-start-card {

	&:last-child {
		animation: slide-right .7s ease-out 5s 1 forwards;
	}

	@-webkit-keyframes slide-right {

		20% {
			transform: translateX( -5% );
		}

		80% {
			transform: translateX( 107% );
		}

    	100% {
    		transform: translateX( 105% );
    	}
	}

	@keyframes slide-right {

		20% {
			transform: translateX( -5% );
		}

		80% {
			transform: translateX( 107% );
		}

    	100% {
    		transform: translateX( 105% );
    	}
	}
}

